--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -1,6 +1,6 @@
 <odoo>
     <data>
-            <!-- Define Label Paper Format (Portrait Orientation) -->
+        <!-- Define Label Paper Format (Portrait Orientation) -->
         <record id="paperformat_label_4_5_9_5" model="report.paperformat">
             <field name="name">Label 4.5x9.5 Portrait</field>
             <field name="format">custom</field>
@@ -11,61 +11,59 @@
             <field name="margin_left">2</field>
             <field name="margin_right">2</field>
         </record>
-  
-        <!-- Report Template -->
-       <!-- Report Template -->
-<template id="report_stock_picking_template">
-    <t t-call="web.basic_layout">
-        <t t-foreach="docs" t-as="doc">
-            <div style="font-size: 22px; line-height: 1.3;">
-                <h4 style="font-size: 22px; text-align: center; font-weight: bold;">Weighing Label</h4>
-                <table style="width: 100%; table-layout: fixed;">
-                    <tr style="border: none;">
-                        <td style="width: 50%; font-weight: bold;">Product: <span t-esc="doc.product_id.name"/></td>
-                        <td style="width: 50%; font-weight: bold;">ID: <span t-esc="doc.product_id.id"/></td>
-                    </tr>
-                    <tr style="border: none; ">
-                        <td style="font-weight: bold;">Batch No: </td>
-                        <td></td>
-                    </tr>
-                    <tr style="border: none;  ">
-                        <td style="font-weight: bold;">Item: <span t-esc="doc.product_id.name"/></td>
-                        <td style="font-weight: bold;">ID: <span t-esc="doc.product_id.id"/></td>
-                    </tr>
-                    <tr style="border: none; ">
-                        <td style="font-weight: bold;">Exp:</td>
-                        <td style="font-weight: bold;">Control No: <span t-esc="doc.lot_ids.display_name"/> </td>
-                    </tr>
-                    <tr style="border: none; ">
-                        <td style="font-weight: bold;">Actual: <span t-esc="doc.external_weight"/> <span t-esc="doc.external_unit"/></td>
-                        <td style="font-weight: bold;">Theoretical: <span t-esc="doc.quantity"/> <span t-esc="doc.product_uom.name"/></td>
-                    </tr>
-                    <tr style="border: none; ">
-                        <td style="font-weight: bold;">Dispenser:</td>
-                        <td style="font-weight: bold;">IPC:</td>
-                    </tr>
-                    <tr style="border: none; en;">
-                        <td style="font-weight: bold;">Date:<span t-esc="doc.time_printing"/></td>
-                        <td></td>
-                    </tr>
-                    <tr style="border: none; en;">
-                        <td style="font-weight: bold;">QAP-09-052</td>
-                        <td>(1)of(1)</td>
-                    </tr>
-                </table>
-            </div>
-        </t>
-    </t>
-</template>
 
+        <!-- Report Template -->
+        <template id="report_stock_picking_template">
+            <t t-call="web.basic_layout">
+                <t t-foreach="docs" t-as="doc">
+                    <div style="font-size: 22px; line-height: 1.3;">
+                        <h4 style="font-size: 22px; text-align: center; font-weight: bold;">Weighing Label</h4>
+                        <table style="width: 100%; table-layout: fixed;">
+                            <tr style="border: none;">
+                                <td style="width: 50%; font-weight: bold;">Product: <span t-esc="doc.product_id.name"/></td>
+                                <td style="width: 50%; font-weight: bold;">ID: <span t-esc="doc.product_id.id"/></td>
+                            </tr>
+                            <tr style="border: none;">
+                                <td style="font-weight: bold;">Batch No: </td>
+                                <td></td>
+                            </tr>
+                            <tr style="border: none;">
+                                <td style="font-weight: bold;">Item: <span t-esc="doc.product_id.name"/></td>
+                                <td style="font-weight: bold;">ID: <span t-esc="doc.product_id.id"/></td>
+                            </tr>
+                            <tr style="border: none;">
+                                <td style="font-weight: bold;">Exp:</td>
+                                <td style="font-weight: bold;">Control No: <span t-esc="doc.lot_ids.display_name"/> </td>
+                            </tr>
+                            <tr style="border: none;">
+                                <td style="font-weight: bold;">Actual: <span t-esc="doc.external_weight"/> <span t-esc="doc.external_unit"/></td>
+                                <td style="font-weight: bold;">Theoretical: <span t-esc="doc.quantity"/> <span t-esc="doc.product_uom.name"/></td>
+                            </tr>
+                            <tr style="border: none;">
+                                <td style="font-weight: bold;">Dispenser:</td>
+                                <td style="font-weight: bold;">IPC:</td>
+                            </tr>
+                            <tr style="border: none;">
+                                <td style="font-weight: bold;">Date:<span t-esc="doc.time_printing"/></td>
+                                <td></td>
+                            </tr>
+                            <tr style="border: none;">
+                                <td style="font-weight: bold;">QAP-09-052</td>
+                                <td>(1)of(1)</td>
+                            </tr>
+                        </table>
+                    </div>
+                </t>
+            </t>
+        </template>
 
         <!-- Report Action -->
         <record id="action_report_stock_picking" model="ir.actions.report">
             <field name="name">Weighing Label</field>
             <field name="model">stock.move</field>
             <field name="report_type">qweb-pdf</field>
-            <field name="report_name">stock_picking_report.report_stock_picking_template</field>
-            <field name="paperformat_id" ref="paperformat_a7"/>
+            <field name="report_name">report_stock_picking_template</field>
+            <field name="paperformat_id" ref="paperformat_label_4_5_9_5"/>
         </record>
     </data>
 </odoo>
