--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -62,7 +62,7 @@
             <field name="name">Weighing Label</field>
             <field name="model">stock.move</field>
             <field name="report_type">qweb-pdf</field>
-            <field name="report_name">report_stock_picking_template</field>
+            <field name="report_name">stock_picking_report.report_stock_picking_template</field>
             <field name="paperformat_id" ref="paperformat_label_4_5_9_5"/>
         </record>
     </data>
