--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -20,8 +20,8 @@
                         <h4 style="font-size: 22px; text-align: center; font-weight: bold;">Weighing Label</h4>
                         <table style="width: 100%; table-layout: fixed;">
                             <tr style="border: none;">
-                                <td style="width: 50%; font-weight: bold;">Product: <span t-esc="doc.picking_id.mrp_product_id.name"></td>
-                                <td style="width: 50%; font-weight: bold;">ID: <span t-esc="doc.picking_id.mrp_product_id.id"></td>
+                                <td style="width: 50%; font-weight: bold;">Product: <span t-esc="doc.picking_id.mrp_product_id.name"/></td>
+                                <td style="width: 50%; font-weight: bold;">ID: <span t-esc="doc.picking_id.mrp_product_id.id"/></td>
                             </tr>
                             <tr style="border: none;">
                                 <td style="font-weight: bold;">Batch No: <span t-esc="doc.picking_id.batch"/></td>
