--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -60,15 +60,21 @@
         <!-- CSS Styles -->
         <template id="report_stock_picking_styles" name="Stock Picking Label Styles">
             <style>
+                @page {
+                    size: 4.5cm 9.5cm;
+                    margin: 1mm;
+                }
+                body {
+                    font-family: Arial, sans-serif;
+                }
                 .label-container {
                     width: 100%;
                     height: 100%;
                     padding: 1mm;
                     box-sizing: border-box;
-                    font-family: Arial, sans-serif;
                 }
                 .label-title {
-                    font-size: 3mm;
+                    font-size: 2.5vw;
                     text-align: center;
                     font-weight: bold;
                     margin: 0 0 1mm 0;
@@ -79,7 +85,7 @@
                     border-collapse: collapse;
                 }
                 .label-cell {
-                    font-size: 2mm;
+                    font-size: 1.8vw;
                     line-height: 1.2;
                     padding: 0.5mm 0;
                     white-space: nowrap;
