--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -15,26 +15,25 @@
 
         <!-- Report Template -->
         <template id="report_stock_picking_template">
-            <t t-call="web.html_container">
-                <t t-call="stock_picking_report.report_stock_picking_styles"/>
+            <t t-call="web.basic_layout">
                 <t t-foreach="docs" t-as="doc">
                     <div class="label-container">
                         <h4 class="label-title">Weighing Label</h4>
                         <table class="label-table">
                             <tr>
-                                <td class="label-cell">Product: <span t-esc="doc.picking_id.product_id.name"/></td>
-                                <td class="label-cell">ID: <span t-esc="doc.picking_id.product_id.id"/></td>
+                                <td class="label-cell" colspan="2">Product: <span t-esc="doc.picking_id.product_id.name"/></td>
+                            </tr>
+                            <tr>
+                                <td class="label-cell" colspan="2">ID: <span t-esc="doc.picking_id.product_id.id"/></td>
                             </tr>
                             <tr>
                                 <td class="label-cell" colspan="2">Batch No: <span t-esc="doc.picking_id.lot_id.name"/></td>
                             </tr>
                             <tr>
-                                <td class="label-cell">Item: <span t-esc="doc.picking_id.product_id.name"/></td>
-                                <td class="label-cell">ID: <span t-esc="doc.picking_id.product_id.id"/></td>
+                                <td class="label-cell" colspan="2">Exp: <span t-esc="doc.picking_id.lot_id.expiration_date" t-options='{"widget": "date"}'/></td>
                             </tr>
                             <tr>
-                                <td class="label-cell">Exp: <span t-esc="doc.picking_id.lot_id.expiration_date" t-options='{"widget": "date"}'/></td>
-                                <td class="label-cell">Control No: <span t-esc="doc.picking_id.lot_id.name"/></td>
+                                <td class="label-cell" colspan="2">Control No: <span t-esc="doc.picking_id.lot_id.name"/></td>
                             </tr>
                             <tr>
                                 <td class="label-cell">Actual: <span t-esc="doc.external_weight"/> <span t-esc="doc.external_unit"/></td>
@@ -61,23 +60,25 @@
         <template id="report_stock_picking_styles" name="Stock Picking Label Styles">
             <style>
                 @page {
-                    size: 4.5cm 9.5cm;
+                    size: 45mm 95mm;
                     margin: 1mm;
                 }
                 body {
                     font-family: Arial, sans-serif;
+                    font-size: 10pt;
+                    line-height: 1.2;
                 }
                 .label-container {
-                    width: 100%;
-                    height: 100%;
+                    width: 43mm;
+                    height: 93mm;
                     padding: 1mm;
                     box-sizing: border-box;
                 }
                 .label-title {
-                    font-size: 2.5vw;
+                    font-size: 12pt;
                     text-align: center;
                     font-weight: bold;
-                    margin: 0 0 1mm 0;
+                    margin: 0 0 2mm 0;
                 }
                 .label-table {
                     width: 100%;
@@ -85,12 +86,8 @@
                     border-collapse: collapse;
                 }
                 .label-cell {
-                    font-size: 1.8vw;
-                    line-height: 1.2;
-                    padding: 0.5mm 0;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
+                    padding: 1mm 0;
+                    vertical-align: top;
                 }
                 @media print {
                     .label-container {
