--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -4,35 +4,37 @@
         <record id="paperformat_label_4_5_9_5" model="report.paperformat">
             <field name="name">Label 4.5x9.5 Portrait</field>
             <field name="format">custom</field>
-            <field name="page_height">95</field> <!-- Height in mm -->
-            <field name="page_width">45</field> <!-- Width in mm -->
+            <field name="page_height">95</field>
+            <field name="page_width">45</field>
             <field name="margin_top">1</field>
             <field name="margin_bottom">1</field>
             <field name="margin_left">1</field>
             <field name="margin_right">1</field>
+            <field name="dpi">300</field>
         </record>
 
         <!-- Report Template -->
         <template id="report_stock_picking_template">
-            <t t-call="web.basic_layout">
+            <t t-call="web.html_container">
+                <t t-call="stock_picking_report.report_stock_picking_styles"/>
                 <t t-foreach="docs" t-as="doc">
-                     <div class="label-container">
+                    <div class="label-container">
                         <h4 class="label-title">Weighing Label</h4>
                         <table class="label-table">
                             <tr>
-                                <td class="label-cell" colspan="2">Product: <span t-esc="doc.picking_id.product_id.name"/></td>
-                            </tr>
-                            <tr>
-                                <td class="label-cell" colspan="2">ID: <span t-esc="doc.picking_id.product_id.id"/></td>
+                                <td class="label-cell">Product: <span t-esc="doc.picking_id.product_id.name"/></td>
+                                <td class="label-cell">ID: <span t-esc="doc.picking_id.product_id.id"/></td>
                             </tr>
                             <tr>
                                 <td class="label-cell" colspan="2">Batch No: <span t-esc="doc.picking_id.lot_id.name"/></td>
                             </tr>
                             <tr>
-                                <td class="label-cell" colspan="2">Exp: <span t-esc="doc.picking_id.lot_id.expiration_date" t-options='{"widget": "date"}'/></td>
+                                <td class="label-cell">Item: <span t-esc="doc.picking_id.product_id.name"/></td>
+                                <td class="label-cell">ID: <span t-esc="doc.picking_id.product_id.id"/></td>
                             </tr>
                             <tr>
-                                <td class="label-cell" colspan="2">Control No: <span t-esc="doc.picking_id.lot_id.name"/></td>
+                                <td class="label-cell">Exp: <span t-esc="doc.picking_id.lot_id.expiration_date" t-options='{"widget": "date"}'/></td>
+                                <td class="label-cell">Control No: <span t-esc="doc.picking_id.lot_id.name"/></td>
                             </tr>
                             <tr>
                                 <td class="label-cell">Actual: <span t-esc="doc.external_weight"/> <span t-esc="doc.external_unit"/></td>
@@ -54,27 +56,22 @@
                 </t>
             </t>
         </template>
+
         <!-- CSS Styles -->
         <template id="report_stock_picking_styles" name="Stock Picking Label Styles">
             <style>
-                @page {
-                    size: 45mm 95mm;
-                    margin: 1mm;
-                }
-                body {
-                    font-family: Arial, sans-serif;
-                    font-size: 10pt;
-                    line-height: 1.2;
-                }
                 .label-container {
-                    width: 43mm;
-                    height: 93mm;
+                    width: 100%;
+                    height: 100%;
                     padding: 1mm;
+                    box-sizing: border-box;
+                    font-family: Arial, sans-serif;
                 }
                 .label-title {
-                    font-size: 12pt;
+                    font-size: 3mm;
                     text-align: center;
                     font-weight: bold;
+                    margin: 0 0 1mm 0;
                 }
                 .label-table {
                     width: 100%;
@@ -82,8 +79,12 @@
                     border-collapse: collapse;
                 }
                 .label-cell {
-                    padding: 1mm 0;
-                    vertical-align: top;
+                    font-size: 2mm;
+                    line-height: 1.2;
+                    padding: 0.5mm 0;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
                 @media print {
                     .label-container {
@@ -99,6 +100,10 @@
             <field name="model">stock.move</field>
             <field name="report_type">qweb-pdf</field>
             <field name="report_name">stock_picking_report.report_stock_picking_template</field>
+            <field name="report_file">stock_picking_report.report_stock_picking_template</field>
+            <field name="print_report_name">'Weighing Label - %s' % (object.picking_id.name)</field>
+            <field name="binding_model_id" ref="stock.model_stock_move"/>
+            <field name="binding_type">report</field>
             <field name="paperformat_id" ref="paperformat_label_4_5_9_5"/>
         </record>
     </data>
