--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -33,9 +33,9 @@
                                 <td class="label-cell">ID: <span t-esc="doc.picking_id.product_id.id"/></td>
                             </tr>
                             <tr>
-                                <td class="label-cell">Exp: <span t-if="doc.picking_id.move_line_ids.filtered(lambda line: line.lot_id == doc.picking_id.lot_id) and doc.picking_id.move_line_ids.filtered(lambda line: line.lot_id == doc.picking_id.lot_id)[0].expiration_date" 
-          t-esc="doc.picking_id.move_line_ids.filtered(lambda line: line.lot_id == doc.picking_id.lot_id)[0].expiration_date" 
-          t-options='{"widget": "date"}'/> </td>
+                                <td class="label-cell">Ex : <span t-if="doc.move_line_ids.filtered(lambda line: line.lot_id == doc.lot_id) and doc.move_line_ids.filtered(lambda line: line.lot_id == doc.lot_id)[0].expiration_date" 
+                                t-esc="doc.move_line_ids.filtered(lambda line: line.lot_id == doc.lot_id)[0].expiration_date" 
+                                t-options='{"widget": "date"}' /> </td>
                                 <td class="label-cell">Control No: <span t-esc="doc.lot_ids.name"/></td>
                             </tr>
                             <tr>
