--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -33,7 +33,7 @@
                                 <td class="label-cell">ID: <span t-esc="doc.picking_id.product_id.id"/></td>
                             </tr>
                             <tr>
-                                <td class="label-cell">Ex :  <span t-if="doc.move_line_ids and doc.move_line_ids[0].lot_id and doc.move_line_ids[0].lot_id.expiration_date"  t-esc="doc.move_line_ids[0].lot_id.expiration_date" t-options='{"widget": "date"}' /> </td>
+                                <td class="label-cell">Ex :  <span t-if="doc.move_line_ids and doc.move_line_ids[0].expiration_date"  t-esc="doc.move_line_ids[0].expiration_date" t-options='{"widget": "date"}'/> </td>
                                 <td class="label-cell">Control No: <span t-esc="doc.lot_ids.name"/></td>
                             </tr>
                             <tr>
