--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -1,9 +1,13 @@
 <odoo>
+    <!-- Root Menu -->
+    <menuitem id="menu_devices_root" name="Devices" sequence="10"/>
+
     <!-- Action for Devices -->
     <record id="action_device" model="ir.actions.act_window">
         <field name="name">Devices</field>
         <field name="res_model">devices.device</field>
         <field name="view_mode">tree,form</field>
+        <field name="context">{}</field>
     </record>
 
     <!-- Tree View for Devices -->
@@ -12,8 +16,8 @@
         <field name="model">devices.device</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="name"/>
-                <field name="device_id"/>
+                <field name="name" readonly="1"/>
+                <field name="device_id" readonly="1"/>
             </tree>
         </field>
     </record>
@@ -26,8 +30,8 @@
             <form>
                 <sheet>
                     <group>
-                        <field name="name"/>
-                        <field name="device_id"/>
+                        <field name="name" readonly="1"/>
+                        <field name="device_id" readonly="1"/>
                     </group>
                 </sheet>
             </form>
@@ -35,5 +39,5 @@
     </record>
 
     <!-- Menu Items -->
-    <menuitem id="menu_device" name="Devices" parent="menu_devices_root" action="action_device"/>
+    <menuitem id="menu_device" name="Devices" parent="menu_devices_root" action="action_device" sequence="10"/>
 </odoo>
