--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -30,8 +30,8 @@
             <form>
                 <sheet>
                     <group>
-                        <field name="name" readonly="1">Scale</field>
-                        <field name="device_id" readonly="1">1</field>
+                        <field name="name" readonly="1"/>
+                        <field name="device_id" readonly="1"/>
                     </group>
                 </sheet>
             </form>
