--- a/stock_picking_report/reports/stock_picking_report_template.xml
+++ b/stock_picking_report/reports/stock_picking_report_template.xml
@@ -23,14 +23,14 @@
                         <table class="label-table">
                             <tr>
                                 <td class="label-cell">Product: <span t-esc="doc.picking_id.mrp_product_id.name"/></td>
-                                <td class="label-cell">ID: <span t-esc="doc.picking_id.mrp_product_id.id"/></td>
+                                <td class="label-cell">ID: <span t-esc="doc.picking_id.mrp_product_id.default_code"/></td>
                             </tr>
                             <tr>
                                 <td class="label-cell" colspan="2">Batch No: <span t-esc="doc.picking_id.batch"/></td>
                             </tr>
                             <tr>
                                 <td class="label-cell">Item: <span t-esc="doc.picking_id.product_id.name"/></td>
-                                <td class="label-cell">ID: <span t-esc="doc.picking_id.product_id.id"/></td>
+                                <td class="label-cell">ID: <span t-esc="doc.picking_id.product_id.default_code"/></td>
                             </tr>
                             <tr>
                                 <td class="label-cell">Exp: <span t-if="doc.move_line_ids and doc.move_line_ids[0].expiration_date"  
